--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=iuVK8QzobhQAX8rNrXc&oh=d0a98dd95abf7356099db55674e3d669&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=hFXtw1k48NsAX9Kcy5m&oh=8b586766b776efad21a0752a8835e08d&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -93,7 +93,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>183</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wTDhYDWTy0wAX-3XSLr&oh=3f6d2630a94d6ddc009b7046d91b7a95&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Iu834_ltN4IAX9EFo1d&oh=f47f630d1b2140a65f0b54920d72f8a0&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
 							</div>
 							<div class="article-more__item-name">😏 Өз өміріңді қиындатпа!</div>
 						</a>
@@ -102,7 +102,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>181</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tzQjHnYhVD0AX9gXUNj&oh=b1629e1e05878db02864031720a20bf5&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=ETHS3T21I3EAX8T2fkJ&oh=fba82642ff975e26783089a4cbdfd4b6&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -111,18 +111,9 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NiWh2FRn_osAX9g9KBx&oh=f6d3f58cad9d7eecbbec7ee9897b3208&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=AE2z9mQzjboAX_yMErX&oh=a9783ebdb8c181aa4ecec0e149a73ad8&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 							</div>
 							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
-						</a>
-							<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>158</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=q5lK5I0fJAAAX_LU0I1&oh=9422ce93cded95a4f3c6cc31aa6806fa&oe=5E97BFD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
-							</div>
-							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 							<div class="article-more__item-pic">
@@ -156,9 +147,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>115</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=2frABPuwCfwAX_m35GY&oh=91bcc07152ba19bccdcdc27432ba7b8b&oe=5E98796A" alt="🧐Мен өмірге не үшін келдім?">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=2frABPuwCfwAX_m35GY&oh=0262695c1865ee87d33d6b623604a82c&oe=5EA5A86A" alt="🧐Мен өмірге не үшін келдім?">
 							</div>
 							<div class="article-more__item-name">🧐Мен өмірге не үшін келдім?</div>
+						</a>
+							<a href="./posts/./xx-әtteң-osy-sұraқty-16mln.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>104</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=RWhtuQrWoLgAX947zX9&oh=5833493c6289cd7ac71ae1e8315e8bf1&oe=5E9685A5" alt="😬 Әттең осы сұрақты 16млн">
+							</div>
+							<div class="article-more__item-name">😬 Әттең осы сұрақты 16млн</div>
 						</a>
 						</div>
 				</div>
