--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=iuVK8QzobhQAX8rNrXc&oh=d0a98dd95abf7356099db55674e3d669&oe=5E958FCC" alt="😁 Арманшыл Саят" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=hFXtw1k48NsAX9Kcy5m&oh=8b586766b776efad21a0752a8835e08d&oe=5E958FCC" alt="😁 Арманшыл Саят" /></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</div>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -105,6 +105,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="nakonets-to" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/83975506_3023130101084987_1439778641915288600_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=S79mWWAjgvUAX_GAQ0c&oh=8a67390379d4400ad7dd76ee83831fa8&oe=5E6B402E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НАКОНЕЦ-ТО!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xx-mұnay-әlemdіk-baғasynyң" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=T0PG6xB_okYAX_lo-6T&oh=7337a9c547d17cc00221fea5ae144f02&oe=5E966673" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
@@ -137,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-өz-өmіrіңdі-қiyndatpa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wTDhYDWTy0wAX-3XSLr&oh=3f6d2630a94d6ddc009b7046d91b7a95&oe=5E95DF8E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😏 Өз өміріңді қиындатпа!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Iu834_ltN4IAX9EFo1d&oh=f47f630d1b2140a65f0b54920d72f8a0&oe=5E95DF8E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😏 Өз өміріңді қиындатпа!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -157,7 +167,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tzQjHnYhVD0AX9gXUNj&oh=b1629e1e05878db02864031720a20bf5&oe=5E93F071" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=ETHS3T21I3EAX8T2fkJ&oh=fba82642ff975e26783089a4cbdfd4b6&oe=5E93F071" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💰 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -177,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxmen-өmіrge-ne-үshіn-keldіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=2frABPuwCfwAX_m35GY&oh=91bcc07152ba19bccdcdc27432ba7b8b&oe=5E98796A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=2frABPuwCfwAX_m35GY&oh=0262695c1865ee87d33d6b623604a82c&oe=5EA5A86A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -197,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-x2020x-zhyly-zhetken-zhetіstіkterіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NiWh2FRn_osAX9g9KBx&oh=f6d3f58cad9d7eecbbec7ee9897b3208&oe=5E93ADF6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=AE2z9mQzjboAX_yMErX&oh=a9783ebdb8c181aa4ecec0e149a73ad8&oe=5E93ADF6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😊 «2020» жылы жеткен жетістіктерім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -207,7 +217,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=hRZzu8GivfUAX9CbE0A&oh=875387509bddf569982f37401ad7b081&oe=5E693452" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=j7FuWKSQrvgAX8RcYxM&oh=dc7ea62700eaf8ff6bf1600ad36cc3d2&oe=5E6A85D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -217,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="arman---maқsat---іs--әreket--" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=q5lK5I0fJAAAX_LU0I1&oh=9422ce93cded95a4f3c6cc31aa6806fa&oe=5E97BFD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=q5lK5I0fJAAAX_LU0I1&oh=729811a10932dca6b6ef89fe4d77063f&oe=5EA4EED7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -227,7 +237,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-post-saluғa-uaқyt-zhoқ" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=kdON-VKWSa0AX9aqSjS&oh=30c8902992168d915f8148b11c17bba1&oe=5E8FCF3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=kdON-VKWSa0AX9aqSjS&oh=38977932eabc885e59ec90f3a60e83cb&oe=5E9CFE3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -237,7 +247,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=q6qZ-48J4noAX80gAYh&oh=46008cec51a3ce25267725f59c62db3b&oe=5E8EDC68" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=q6qZ-48J4noAX80gAYh&oh=7e4ba7802a893d250c4ea1f176fb86f1&oe=5E9C0B68" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=fBrWto0F2JsAX9A4MmJ&oh=837b346b2832cd2bcf92dd694dc50172&oe=5E98B22E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=w7nVFl5FG8cAX_QvNfF&oh=ca6ac46d7c56626d69f0b49d818c08c3&oe=5EA5E12E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,16 +278,6 @@
 							<input id="xx-30-kүnde-үy-satudyң-3x1-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=N5ZE7oLaFoQAX-JJWyD&oh=89e7dab0e1630f50a34208b5bb0d551d&oe=5EA60F27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xx-biznesmenge-kerektі-bіlіm" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=4uW6xBxUTWMAX9_7lJR&oh=199573bae31d7c1db0521541d60e07a1&oe=5E9B6D2D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
